--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <!-- Bootstrap core CSS -->
     <link href="./assets/plugins/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
-    <link href="./assets/css/simple-sidebar.css" rel="stylesheet">
+    <link href="./assets/css/style.css" rel="stylesheet">
     <script src="./assets/plugins/js/jquery.min.js"></script>
   </head>
   <body>
